--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-numpy
-matplotlib
+streamlit==1.29.0
+pandas==2.1.1
+numpy==1.26.0
+matplotlib==3.8.0
 tensorflow==2.14.0
+rich==14.2.0
